--- a/job/templates/admin_navigation.html
+++ b/job/templates/admin_navigation.html
@@ -68,7 +68,7 @@
               </li>
 
               <li class="nav-item tab">
-                <a class="nav-link active text-white" aria-current="page" href="#">Change Password</a>
+                <a class="nav-link active text-white" aria-current="page" href="/change_passwordadmin">Change Password</a>
               </li>
 
               <li class="nav-item tab">
