--- a/job/templates/recruiter_all.html
+++ b/job/templates/recruiter_all.html
@@ -36,7 +36,7 @@
                 <td><img src="{{i.image.url}}" style="width:80px; height: 80px; border-radius: 100px;"></td>
                 <td>{{i.status}}</td>
                 <td>
-                    <a href="#" class="btn btn-warning">Edit</a>
+                    <a href="{% url 'delete_recruiter' i.user.id %}" onclick="return confirm('Are you sure?')" class="btn btn-danger" style="background-color: red;">Delete</a>
                     <a href="{% url 'change_status' i.id %}" class="btn btn-success" style="background-color: maroon;">Change Status</a>
                 </td>
             </tr>
