--- a/job/templates/view_users.html
+++ b/job/templates/view_users.html
@@ -28,12 +28,12 @@
                 <td>{{forloop.counter}}</td>
                 <td>{{i.user.first_name}} {{i.user.last_name}}</td>
                 <td>{{i.user.username}}</td>
-                <td>{{i.mobile}}</td>
-                <td>{{i.gender}}</td>
+                <td>{{i.mobile}}</td> 
+                <td>{{i.gender}}</td> 
                 <td><img src="{{i.image.url}}" style="width:80px; height: 80px; border-radius: 100px;"></td>
                 <td>
                     <a href="#" class="btn btn-warning">Edit</a>
-                    <a href="{% url 'delete_user' i.id %}" class="btn btn-danger" onclick="return confirm('Are You Sure?')" style="background-color: maroon;">Delete</a>
+                    <a href="{% url 'delete_user' i.user.id %}" class="btn btn-danger" onclick="return confirm('Are You Sure?')" style="background-color: maroon;">Delete</a>
                 </td>
             </tr>
         {% endfor %}
