some new features added

--- a/job/templates/change_passworduser.html
+++ b/job/templates/change_passworduser.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block body %}
 
-{% include 'admin_navigation.html' %}
+{% include 'user_navigation.html' %}
 <script>
     function checkpass()
     {
@@ -14,7 +14,7 @@
     }
 </script>
 
-<marquee style="font-weight: 500;">Change Admin Password</marquee>
+<marquee style="font-weight: 500;">Change User Password</marquee>
 
 <form method="POST" class="container mt-3" style="width:55%" name="changepassword" onsubmit="return checkpass()">
     {% csrf_token %}
@@ -40,7 +40,6 @@
 {% elif error == "yes" %}
 <script>
     alert("Something went wrong, Try Again...");
-    window.location = ('{% url "change_passwordadmin" %}')
 </script>
 
 {% elif error == "not" %}
