--- a/job/templates/recruiter_home.html
+++ b/job/templates/recruiter_home.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block body %}
 
-{% include 'user_navigation.html' %}
+{% include 'recruiter_navigation.html' %}
 <marquee style="font-weight: 500;">Recruiter Home Page</marquee>
 
 
