--- a/job/templates/recruiter_navigation.html
+++ b/job/templates/recruiter_navigation.html
@@ -48,15 +48,23 @@
 
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item tab">
-                <a class="nav-link active text-white" aria-current="page" href="/user_home">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="/recruiter_home">Home</a>
               </li>
 
               <li class="nav-item tab">
-                <a class="nav-link active text-white" aria-current="page" href="#">Job List</a>
+                <a class="nav-link active text-white" aria-current="page" href="/job_list">Job List</a>
               </li>
 
               <li class="nav-item tab">
-                <a class="nav-link active text-white" aria-current="page" href="/change_passworduser">Change Password</a>
+                <a class="nav-link active text-white" aria-current="page" href="/add_job">Add Job</a>
+              </li>
+
+              <li class="nav-item tab">
+                <a class="nav-link active text-white" aria-current="page" href="#">Candidate Applied</a>
+              </li>
+
+              <li class="nav-item tab">
+                <a class="nav-link active text-white" aria-current="page" href="#">Change Password</a>
               </li>
 
               <li class="nav-item tab">
